==> yizhihub/disciplineAlarm/snvs_lp_srtc/VS10XX.c <==
#include "fsl_common.h"
#include "vs10XX.h"
#include "fsl_lpspi.h"
#include "imu_spi.h"
#include "fsl_debug_console.h"
#define LPSPI_MASTER_BASEADDR   (LPSPI3)
#define LPSPI_MASTER_IRQN       (LPSPI3_IRQn)
#define LPSPI_MASTER_IRQHandler (LPSPI3_IRQHandler)
#define VS_LPSPI_MASTER_PCS_FOR_INIT_XDCS   (kLPSPI_Pcs0)                               /* OnBoard Gyro.  */
#define VS_LPSPI_MASTER_PCS_FOR_INIT_XCS    (kLPSPI_Pcs2)                               /* imu board Gyro.*/
#define VS_PCS_XDCS                        (kLPSPI_MasterPcs0)
#define VS_PCS_XCS                         (kLPSPI_MasterPcs2)

void VS_Init(void)
{	 
//	
//	GPIO_InitTypeDef  GPIO_InitStructure;
// 	
// 	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);	 //使能PA端口时钟
//	
// 	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;				 //PA12
// 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU; 		 //输入
// 	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
// 	GPIO_Init(GPIOA, &GPIO_InitStructure);

// 
// 	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4|GPIO_Pin_8|GPIO_Pin_11;//PF6,PF7
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
//	GPIO_Init(GPIOA, &GPIO_InitStructure);	
//	
//	GPIO_SetBits(GPIOA,GPIO_Pin_4|GPIO_Pin_8|GPIO_Pin_11|GPIO_Pin_12);
//	
//	SPI1_Init();	 
    
//    RCC->APB2ENR|=1<<2;  	//PORTA时钟使能 
//	GPIOA->CRL&=0XFFF0FFFF;	//PA4 XDCS
//	GPIOA->CRL|=0X00030000; 
//	GPIOA->CRH&=0XFFF00FF0;	//PA8 XCS;PA11 RST;PA12 DQ
//	GPIOA->CRH|=0X00083003; 	 
//	GPIOA->ODR|=(1<<4)|(1<<8)|(1<<11)|(1<<12);	//PA4,8,11,12上拉   
//	SPI1_Init();								//初始化SPI 

 lpspi_master_config_t masterConfig;
    
    /*
     * Clock setting for LPI2C
     */
    CLOCK_SetMux(kCLOCK_LpspiMux, 1);
    CLOCK_SetDiv(kCLOCK_LpspiDiv, 7);
    
    masterConfig.baudRate = 2000000;                      // 2MHz (actuall 1.992MHz use oscilloscope)
    masterConfig.bitsPerFrame = 8;
    masterConfig.cpol = kLPSPI_ClockPolarityActiveHigh;
    masterConfig.cpha = kLPSPI_ClockPhaseFirstEdge;
    masterConfig.direction = kLPSPI_MsbFirst;

    masterConfig.pcsToSckDelayInNanoSec = 10;          //20(actually 34ns use oscilloscope)    100ns(actually 112ns use Oscil) 10ns(actuall 14ns)
    masterConfig.lastSckToPcsDelayInNanoSec = 100;     //200(actuall 200ns exactly use Oscill) tXCSH min = 1 CLKI cycle 
    ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;          //600->200 otherwise it will stuck in 1038A (search this) or add some delay after 1038B func.
    masterConfig.betweenTransferDelayInNanoSec = 100;  //600(actuall 600ns exactly use Oscill) 

    masterConfig.whichPcs = VS_LPSPI_MASTER_PCS_FOR_INIT_XDCS;
    masterConfig.pcsActiveHighOrLow = kLPSPI_PcsActiveLow;

    masterConfig.pinCfg = kLPSPI_SdiInSdoOut;
    masterConfig.dataOutConfig = kLpspiDataOutRetained;
    LPSPI_MasterInit(LPSPI_MASTER_BASEADDR, &masterConfig, CLOCK_GetFreq(kCLOCK_Usb1PllPfd0Clk)/8);
    
    masterConfig.whichPcs = VS_LPSPI_MASTER_PCS_FOR_INIT_XCS;
    LPSPI_MasterInit(LPSPI_MASTER_BASEADDR, &masterConfig, CLOCK_GetFreq(kCLOCK_Usb1PllPfd0Clk)/8);
    
    LPSPI_Enable(LPSPI_MASTER_BASEADDR, true);
    
    /* 
     * Set the Int Priority and enable Int
     */
    NVIC_SetPriority(LPSPI_MASTER_IRQN, 2);
    EnableIRQ(LPSPI_MASTER_IRQN);   
    
    /* 
     *   rxWatermark  设置 14字节，读一次MPU共读出15个字节 
     */
    LPSPI_SetFifoWatermarks(LPSPI_MASTER_BASEADDR, 1, 14);

    LPSPI_Enable(LPSPI_MASTER_BASEADDR, false);
    LPSPI_MASTER_BASEADDR->CFGR1 &= (~LPSPI_CFGR1_NOSTALL_MASK);
    LPSPI_Enable(LPSPI_MASTER_BASEADDR, true);
    
    /*
     * Flush FIFO , clear status , disable all the inerrupts.
     */
    LPSPI_FlushFifo(LPSPI_MASTER_BASEADDR, true, true);
    LPSPI_ClearStatusFlags(LPSPI_MASTER_BASEADDR, kLPSPI_AllStatusFlag);
    LPSPI_DisableInterrupts(LPSPI_MASTER_BASEADDR, kLPSPI_AllInterruptEnable); 
    
    spiReadWriteByte(VS_PCS_XCS, 0xFF, 0xFF);
}

void VS_Soft_Reset(void)
{	 
	INT8U retry=0;  				   
	while(VS_DQ==0); //等待软件复位结束	   
//	VS_SPI_ReadWriteByte(0Xff);//启动传输  no way  no such api in RT1050's SDK 
	retry=0;
	while(VS_RD_Reg(SPI_MODE)!=0x0800)// 软件复位,新模式  
	{
		VS_WR_Cmd(SPI_MODE,0x0804);// 软件复位,新模式	    
		msDelay(2);//等待至少1.35ms 
		if(retry++>100)break; 	    
	}	 		 
	while(VS_DQ==0);//等待软件复位结束	 
	retry=0;
	while(VS_RD_Reg(SPI_CLOCKF)!=0X9800)//设置VS10XX的时钟,3倍频 ,1.5xADD 
	{
		VS_WR_Cmd(SPI_CLOCKF,0X9800);//设置VS10XX的时钟,3倍频 ,1.5xADD
		if(retry++>100)break; 	    
	}		    										    
	msDelay(20);
}

INT8U VS_HD_Reset(void)
{
	INT8U ucRetryCnt=0;
	VS_RST_0;
	msDelay(20);
//	VS_XDCS=1;//取消数据传输   no way 
//	VS_XCS=1;//取消数据传输    no way 
	VS_RST_1; 
	while (VS_DQ==0 && ucRetryCnt<200)//等待DREQ为高
	{
		ucRetryCnt++;
		usDelay(50);
	};
	msDelay(20);	
	if (ucRetryCnt >= 200) return 1;
	else                   return 0;	    		 
}

void VS_Sine_Test(void)
{											    
// 	VS_HD_Reset();	 
//	VS_WR_Cmd(0x0b,0X2020);	  //设置音量	 
// 	VS_WR_Cmd(SPI_MODE,0x0820);//进入VS10XX的测试模式     
//	while(VS_DQ==0);     //等待DREQ为高
//	printf("mode sin:%x\n",VS_RD_Reg(SPI_MODE));
// 	//向VS10XX发送正弦测试命令：0x53 0xef 0x6e n 0x00 0x00 0x00 0x00
// 	//其中n = 0x24, 设定VS10XX所产生的正弦波的频率值，具体计算方法见VS10XX的datasheet
//  	VS_SPI_SpeedLow();//低速 
//	VS_XDCS=0;//选中数据传输
//	VS_SPI_ReadWriteByte(0x53);
//	VS_SPI_ReadWriteByte(0xef);
//	VS_SPI_ReadWriteByte(0x6e);
//	VS_SPI_ReadWriteByte(0x24);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	msDealy(100);
//	VS_XDCS=1; 
//    //退出正弦测试
//    VS_XDCS=0;//选中数据传输
//	VS_SPI_ReadWriteByte(0x45);
//	VS_SPI_ReadWriteByte(0x78);
//	VS_SPI_ReadWriteByte(0x69);
//	VS_SPI_ReadWriteByte(0x74);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	msDealy(100);
//	VS_XDCS=1;	

////    msDealy(500);

//    //再次进入正弦测试并设置n值为0x44，即将正弦波的频率设置为另外的值
//    VS_XDCS=0;//选中数据传输      
//	VS_SPI_ReadWriteByte(0x53);
//	VS_SPI_ReadWriteByte(0xef);
//	VS_SPI_ReadWriteByte(0x6e);
//	VS_SPI_ReadWriteByte(0x44);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	msDealy(100);
// 	VS_XDCS=1;
//    //退出正弦测试
//    VS_XDCS=0;//选中数据传输
//	VS_SPI_ReadWriteByte(0x45);
//	VS_SPI_ReadWriteByte(0x78);
//	VS_SPI_ReadWriteByte(0x69);
//	VS_SPI_ReadWriteByte(0x74);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	msDealy(100);
//	VS_XDCS=1;	

    INT8U  ucTxBuf[8] = {0};
    INT8U  ucRxBuf[8] = {0};
    status_t  kStatus;
    lpspi_transfer_t  xTrans;  
    
    VS_HD_Reset();
 	VS_WR_Cmd(0x0b,0X3030);	  //设置音量	 
 	VS_WR_Cmd(SPI_MODE,0x0820);//进入VS10XX的测试模式 
    PRINTF("mode sin:%x\n",VS_RD_Reg(SPI_MODE));
    
    ucTxBuf[0] = 0x53;
    ucTxBuf[1] = 0xef;
    ucTxBuf[2] = 0x6e; 
    ucTxBuf[3] = 0x24; 
    ucTxBuf[4] = 0x00; 
    ucTxBuf[5] = 0x00; 
    ucTxBuf[6] = 0x00; 
    ucTxBuf[7] = 0x00;  
    
    xTrans.dataSize    = 8;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;               // VS_XDCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    msDelay(100);
    
    if (kStatus != kStatus_Success) {
        while(1);
    }
    
    ucTxBuf[0] = 0x45;
    ucTxBuf[1] = 0x78;
    ucTxBuf[2] = 0x69; 
    ucTxBuf[3] = 0x74; 
    ucTxBuf[4] = 0x00; 
    ucTxBuf[5] = 0x00; 
    ucTxBuf[6] = 0x00; 
    ucTxBuf[7] = 0x00;  
    
    xTrans.dataSize    = 8;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;               // VS_XDCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    msDelay(100);
    
    if (kStatus != kStatus_Success) {
        while(1);
    }
    
    ucTxBuf[0] = 0x53;
    ucTxBuf[1] = 0xef;
    ucTxBuf[2] = 0x6e; 
    ucTxBuf[3] = 0x44; 
    ucTxBuf[4] = 0x00; 
    ucTxBuf[5] = 0x00; 
    ucTxBuf[6] = 0x00; 
    ucTxBuf[7] = 0x00;  
    
    xTrans.dataSize    = 8;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;               // VS_XDCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    msDelay(100);
    
    if (kStatus != kStatus_Success) {
        while(1);
    }
    
    ucTxBuf[0] = 0x45;
    ucTxBuf[1] = 0x78;
    ucTxBuf[2] = 0x69; 
    ucTxBuf[3] = 0x74; 
    ucTxBuf[4] = 0x00; 
    ucTxBuf[5] = 0x00; 
    ucTxBuf[6] = 0x00; 
    ucTxBuf[7] = 0x00;  
    
    xTrans.dataSize    = 8;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;               // VS_XDCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    msDelay(100);
    
    if (kStatus != kStatus_Success) {
        while(1);
    }
}

INT16U VS_Ram_Test(void)
{ 
//	VS_HD_Reset();     
// 	VS_WR_Cmd(SPI_MODE,0x0820);// 进入VS10XX的测试模式
//	while (VS_DQ==0); // 等待DREQ为高			   
// 	VS_SPI_SpeedLow();//低速 
//	VS_XDCS=0;	       		    // xDCS = 1，选择VS10XX的数据接口
//	VS_SPI_ReadWriteByte(0x4d);
//	VS_SPI_ReadWriteByte(0xea);
//	VS_SPI_ReadWriteByte(0x6d);
//	VS_SPI_ReadWriteByte(0x54);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_SPI_ReadWriteByte(0x00);
//	VS_XDCS=1;
//	msDealy(150);  

//	return VS_RD_Reg(SPI_HDAT0);// VS1003如果得到的值为0x807F，则表明完好;VS1053为0X83FF.;       
    
    INT8U  ucTxBuf[8] = {0x4d, 0xea, 0x6d, 0x54, 0x00, 0x00, 0x00, 0x00};
    INT8U  ucRxBuf[8] = {0};
    status_t  kStatus;
    lpspi_transfer_t  xTrans;  
    
    VS_HD_Reset();
    VS_WR_Cmd(SPI_MODE,0x0820);                                              // 1038B                                    
    
    xTrans.dataSize    = 8;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;               // VS_XDCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    
    if (kStatus != kStatus_Success) {
        while(1);                                                             // 1038A 
    }
    msDelay(150);  
    return VS_RD_Reg(SPI_HDAT0);// VS1003如果得到的值为0x807F，则表明完好;VS1053为0X83FF.;      
}

void VS_WR_Cmd(INT8U address,INT16U data)
{  
//	while(VS_DQ==0);//等待空闲		  
//	VS_SPI_SpeedLow();//低速 	   
//	VS_XDCS=1; 	 
//	VS_XCS=0; 	 
//	VS_SPI_ReadWriteByte(VS_WRITE_COMMAND);//发送VS10XX的写命令
//	VS_SPI_ReadWriteByte(address); //地址
//	VS_SPI_ReadWriteByte(data>>8); //发送高八位
//	VS_SPI_ReadWriteByte(data);	 //第八位
//	VS_XCS=1;           
//	VS_SPI_SpeedHigh();//高速	

    INT8U  ucTxBuf[4];
    INT8U  ucRxBuf[4];
    status_t  kStatus;
    lpspi_transfer_t  xTrans;  

    ucTxBuf[0] = VS_WRITE_COMMAND;
    ucTxBuf[1] = address;
    ucTxBuf[2] = data >> 8;
    ucTxBuf[3] = data;
    
    xTrans.dataSize    = 4;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XCS | kLPSPI_MasterPcsContinuous;               // VS_XCS
    
    while(VS_DQ==0);//等待空闲 
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    
    if (kStatus != kStatus_Success) {
        //while(1);
        while(1);
    }      
}

INT16U VS_RD_Reg(INT8U address)
{     
//	while(VS_DQ==0);	//等待空闲	   
//	VS_SPI_SpeedLow();//低速 
//	VS_XDCS=1;       
//	VS_XCS=0; 
//	VS_SPI_ReadWriteByte(VS_READ_COMMAND);	//发送VS10XX的读命令
//	VS_SPI_ReadWriteByte(address);       	//地址
//	temp=VS_SPI_ReadWriteByte(0xff); 		//读取高字节
//	temp=temp<<8;
//	temp+=VS_SPI_ReadWriteByte(0xff); 		//读取低字节
//	VS_XCS=1;   

   	INT16U temp=0;   
    INT8U  ucTxBuf[4];
    INT8U  ucRxBuf[4];
    status_t  kStatus;
    lpspi_transfer_t  xTrans; 

    ucTxBuf[0] = VS_READ_COMMAND;
    ucTxBuf[1] = address;
 
    xTrans.dataSize    = 4;
    xTrans.txData      = ucTxBuf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XCS | kLPSPI_MasterPcsContinuous;               // VS_XCS
    
    while(VS_DQ==0);	//等待空闲	  
    kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    
    usDelay(50);
    
    if (kStatus != kStatus_Success) {
        while(1);
    }
    
    temp = (ucRxBuf[2] << 8) | ucRxBuf[3];
  
//	VS_SPI_SpeedHigh();//高速	  
   return temp; 
}

INT8U VS_Send_MusicData(const INT8U* buf)
{
//	INT8U n;
//	if(VS_DQ!=0)  //送数据给VS10XX
//	{			   	 
//		VS_XDCS=0;  
//        for(n=0;n<32;n++)
//		{
//			VS_SPI_ReadWriteByte(buf[n]);	 			
//		}
//		VS_XDCS=1;     				   
//	}else return 1;
//	return 0;//成功发送了
    
    INT8U ucRxBuf[32];
    status_t  kStatus;
    lpspi_transfer_t  xTrans;

    xTrans.dataSize    = 32;
    xTrans.txData      = (INT8U *)buf;
    xTrans.rxData      = ucRxBuf;
    xTrans.configFlags = VS_PCS_XDCS | kLPSPI_MasterPcsContinuous;
   
    if (VS_DQ!=0) {  //送数据给VS10XX
        kStatus = LPSPI_MasterTransferBlocking(LPSPI_MASTER_BASEADDR,  &xTrans);    

        if (kStatus != kStatus_Success) {
            while(1);
        } 
    } else {
        return 1;
    }
    return 0;        
}
